--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<title>deep.dance</title>
 	<link rel="alternate" type="application/rss+xml" href="https://deep.dance/index.xml" title="deep.dance" />
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.52c6c704fecd25e5637b4c9c5836b1ba160cbc59ba6401204e7c017768044ffc.css" integrity="sha256-UsbHBP7NJeVje0ycWDaxuhYMvFm6ZAEgTnwBd2gET/w=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.d4ee439f1370c3443f91d9a6789892a7f8a2f2fd97531dfcb7876ff43e73ac44.css" integrity="sha256-1O5DnxNww0Q/kdmmeJiSp/ii8v2XUx38t4dv9D5zrEQ=" crossorigin="anonymous">
 	
 </head>
 
@@ -34,6 +34,8 @@
 	<div id="spotlight" class="animated fadeIn">
 		<div id="home-center">
 			<h1 id="home-title">deep.dance</h1>
+			<h2 id="home-subtitle">Premiere MAY 28, Hamburg</h2>
+			<h2 id="home-announcement">Infos &amp; Code - available here soon</h2>
 			<nav id="home-nav" class="site-nav">
 				
 
