--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content=""><meta property="og:title" content="404 Page not found" />
+<meta itemprop="description" content="">
+<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://deep.dance/404.html" />
@@ -23,7 +24,7 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>404 Page not found</title>
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.e8a33bf0f9d8de138df81b278ba2b84c73e89a08bfe34a9be8316ea1ee3f522c.css" integrity="sha256-6KM78PnY3hON+Bsni6K4THPomgi/40qb6DFuoe4/Uiw=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.f6cab1c37f3e25bd3959e40d47124621eb4464aae8acf33196418efe270b5850.css" integrity="sha256-9sqxw38+Jb05WeQNRxJGIetEZKrorPMxlkGO/icLWFA=" crossorigin="anonymous">
 </head>
 
 <body id="page">
