--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<title>deep.dance</title>
 	<link rel="alternate" type="application/rss+xml" href="https://deep.dance/index.xml" title="deep.dance" />
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.12d7094153f39fe360128b7132a9ec95218a423cedd2b9f16dfe618efdede6bb.css" integrity="sha256-EtcJQVPzn+NgEotxMqnslSGKQjzt0rnxbf5hjv3t5rs=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.e3fd6ecec5fa52c4301a8edbf47de8cded6a38c24f21dd00c9fd520804b5f826.css" integrity="sha256-4/1uzsX6UsQwGo7b9H3oze1qOMJPId0Ayf1SCAS1+CY=" crossorigin="anonymous">
 	
 </head>
 
@@ -49,7 +49,7 @@
 
 				<ul id="home-funding">
 					
-						<p><strong>deep.dance</strong> ist eine Produktion von Jascha Viehstädt. Gefördert im Rahmen des AUTONOM Programms des Fonds der Darstellenden Künste, von der Behörde für Kunst und Medien Hamburg, sowie der Hamburgischen Kulturstiftung.</p>
+						<p><strong>deep.dance</strong> ist eine Produktion von <a href="http://www.jaschaviehstaedt.com">Jascha Viehstädt</a>. Gefördert im Rahmen des AUTONOM Programms des Fonds Darstellende Künste, von der Behörde für Kultur und Medien Hamburg, sowie der Hamburgischen Kulturstiftung.</p>
 					
 						<div class="icon" style="background-image: url(Autonom_Logo_mitFD_custom.png)">
 							<a target="_blank" href="https://www.fonds-daku.de"></a>
