--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
 				<div class="color-dark text-big underline">
 						<p>Deep.Dance</p>
 						<p>About Coding Choreography</p>
-						<p>17.06.2021</p>
-						<p>20h</p>
+						<p>Online 17.06.2021</p>
+						<p>Offline* 28. &amp; 29.05.2021</p>
+						<p class="text-tiny">* Limited seats only. Reservations can be sent to deepdance@jaschaviehstaedt.com</p>
 				</div>
 			</div>
 			<div id="home-dates" class="color-bright">
@@ -162,8 +163,9 @@
 				<div class="color-dark text-big underline">
 						<p>Deep.Dance</p>
 						<p class="invisible">About Coding Choreography</p>
-						<p class="">17.06.2021</p>
-						<p class="">20h</p>
+						<p class="">Online 17.06.2021</p>
+						<p class="">Offline* 28. &amp; 29.05.2021</p>
+						<p class="text-tiny">* Limited seats only. Reservations can be sent to deepdance@jaschaviehstaedt.com</p>
 				</div>
 			</div>
 			
