--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 			<div id="home-title">
 				<div class="column-spacer-90"></div>
 				<div class="column-spacer-90"></div>
-				<div class="color-dark text-big underline">
-						<p>Deep.Dance</p>
-						<p>About Coding Choreography</p>
-						<p>Online 17.06.2021</p>
-						<p>Offline* 28. &amp; 29.05.2021</p>
-						<p class="text-tiny">* Limited seats only. Reservations can be sent to deepdance@jaschaviehstaedt.com</p>
+				<div class="color-dark text-big">
+						<p class="underline">Deep.Dance</p>
+						<p class="underline"> About Coding Choreography</p>
+						<p class="underline">Online 17.06.2021</p>
+						<p class="underline">Onstage* 28. &amp; 29.05.2021, 20h</p>
+						<p class="coronaInfo text-small">* Wiese eG (Wiesendamm 24, Hamburg).</p>
+						<p class="coronaInfo text-small">Tickets only via reservation: deepdance@jaschaviehstaedt.com</p>
 				</div>
 			</div>
 			<div id="home-dates" class="color-bright">
@@ -160,12 +161,13 @@
 			<div id="home-title-overlay">
 				<div class="column-spacer-90"></div>
 				<div class="column-spacer-90"></div>
-				<div class="color-dark text-big underline">
-						<p>Deep.Dance</p>
-						<p class="invisible">About Coding Choreography</p>
-						<p class="">Online 17.06.2021</p>
-						<p class="">Offline* 28. &amp; 29.05.2021</p>
-						<p class="text-tiny">* Limited seats only. Reservations can be sent to deepdance@jaschaviehstaedt.com</p>
+				<div class="color-dark text-big">
+						<p class="underline">Deep.Dance</p>
+						<p class="underline invisible">About Coding Choreography</p>
+						<p class="underline" class="">Online 17.06.2021</p>
+						<p class="underline" class="">Onstage* 28. &amp; 29.05.2021, 20h</p>
+						<p class="coronaInfo text-small">* Wiese eG (Wiesendamm 24, Hamburg).</p>
+						<p class="coronaInfo text-small">Tickets only via reservation: deepdance@jaschaviehstaedt.com</p>
 				</div>
 			</div>
 			
