--- a/404.html
+++ b/404.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content=""><meta property="og:title" content="404 Page not found" />
+<meta itemprop="description" content="">
+<meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://deep.dance/404.html" />
@@ -23,7 +24,9 @@
 	<link rel="shortcut icon" href="/favicon.ico">
 
 	<title>404 Page not found</title>
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.61dda334c6de4b91bebde805a803160d565d61e8f8a512058617eef8b0177e86.css" integrity="sha256-Yd2jNMbeS5G+vegFqAMWDVZdYej4pRIFhhfu+LAXfoY=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.27900b73463dcea2e8fdd50c30d52ff4a5c5eb3be553817324ca0350e7118a11.css" integrity="sha256-J5ALc0Y9zqLo/dUMMNUv9KXF6zvlU4FzJMoDUOcRihE=" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
 <body id="page">
@@ -43,7 +46,7 @@
 	</div>
 
 
-	<script src="https://deep.dance/js/bundle.min.9bd5004c66497c6ceb9ac4af3d685b2df6f36f12fc1d3432efa4d6627c5cdf95.js" integrity="sha256-m9UATGZJfGzrmsSvPWhbLfbzbxL8HTQy76TWYnxc35U=" crossorigin="anonymous"></script>
+	<script src="https://deep.dance/js/bundle.min.c721de08d656164bb0683f45ba2884603ca9565bd2ed837211f36139cc13644f.js" integrity="sha256-xyHeCNZWFkuwaD9FuiiEYDypVlvS7YNyEfNhOcwTZE8=" crossorigin="anonymous"></script>
 	
 <script type="text/javascript">
     var _paq = window._paq || [];
