--- a/impress/index.html
+++ b/impress/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="Impress">
-<meta itemprop="description" content=""><meta property="og:title" content="Impress" />
+<meta itemprop="description" content="">
+<meta property="og:title" content="Impress" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://deep.dance/impress/" />
@@ -24,7 +25,9 @@
 
 	<title>Impress</title>
 	<link rel="alternate" type="application/rss+xml" href="https://deep.dance/impress/index.xml" title="Impress" />
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.61dda334c6de4b91bebde805a803160d565d61e8f8a512058617eef8b0177e86.css" integrity="sha256-Yd2jNMbeS5G+vegFqAMWDVZdYej4pRIFhhfu+LAXfoY=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.27900b73463dcea2e8fdd50c30d52ff4a5c5eb3be553817324ca0350e7118a11.css" integrity="sha256-J5ALc0Y9zqLo/dUMMNUv9KXF6zvlU4FzJMoDUOcRihE=" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
 <body id="page">
@@ -33,8 +36,8 @@
         <div id="home-content">
             <h2 id="impress">Impress</h2>
 <h4 id="responsible-for-the-content-and-owner-of-the-domain">Responsible for the content and owner of the domain:</h4>
-<p>Jascha Viehstädt<!-- raw HTML omitted -->
-Rentzelstraße 18C<!-- raw HTML omitted -->
+<p>Jascha Viehstädt<br/>
+Rentzelstraße 18C<br/>
 20146 Hamburg</p>
 <h3 id="content-of-the-online-offer">Content of the online offer</h3>
 <p>The author assumes no liability for the topicality, correctness, completeness or quality of the information provided. Liability claims against the author, which refer to material or immaterial damage caused by the use or non-use of the information provided or by the use of incorrect and incomplete information, are fundamentally excluded, unless the author proves to be willful or grossly negligent Is at fault. All offers are non-binding. The author expressly reserves the right to change, supplement or delete parts of the pages or the entire offer or to temporarily or permanently cease publication without prior notice.</p>
@@ -57,7 +60,7 @@ Rentzelstraße 18C<!-- raw HTML omitted -->
     </div>
 
 
-	<script src="https://deep.dance/js/bundle.min.9bd5004c66497c6ceb9ac4af3d685b2df6f36f12fc1d3432efa4d6627c5cdf95.js" integrity="sha256-m9UATGZJfGzrmsSvPWhbLfbzbxL8HTQy76TWYnxc35U=" crossorigin="anonymous"></script>
+	<script src="https://deep.dance/js/bundle.min.c721de08d656164bb0683f45ba2884603ca9565bd2ed837211f36139cc13644f.js" integrity="sha256-xyHeCNZWFkuwaD9FuiiEYDypVlvS7YNyEfNhOcwTZE8=" crossorigin="anonymous"></script>
 	
 <script type="text/javascript">
     var _paq = window._paq || [];
