--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta itemprop="name" content="Privacy">
-<meta itemprop="description" content=""><meta property="og:title" content="Privacy" />
+<meta itemprop="description" content="">
+<meta property="og:title" content="Privacy" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://deep.dance/privacy/" />
@@ -24,7 +25,9 @@
 
 	<title>Privacy</title>
 	<link rel="alternate" type="application/rss+xml" href="https://deep.dance/privacy/index.xml" title="Privacy" />
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.61dda334c6de4b91bebde805a803160d565d61e8f8a512058617eef8b0177e86.css" integrity="sha256-Yd2jNMbeS5G+vegFqAMWDVZdYej4pRIFhhfu+LAXfoY=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.27900b73463dcea2e8fdd50c30d52ff4a5c5eb3be553817324ca0350e7118a11.css" integrity="sha256-J5ALc0Y9zqLo/dUMMNUv9KXF6zvlU4FzJMoDUOcRihE=" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
 
 <body id="page">
@@ -48,7 +51,9 @@
 </ul>
 <p>Note that some tracking cookies will be set during this page view but will be deleted as soon as the user navigates to a different page or closes the browser.</p>
 <h3 id="opt-out-of-website-tracking">Opt-out of website tracking</h3>
-<!-- raw HTML omitted -->
+<iframe style="border: 0; height: 200px; width: 600px;"
+    src="https://trace.fightforindependence.cc/index.php?module=CoreAdminHome&action=optOut&language=en&backgroundColor=&fontColor=&fontSize=&fontFamily=">
+</iframe>
 <h3 id="your-rights">Your Rights</h3>
 <p>You have the right to be informed of Personal Data processed by us, a right to rectification/correction, erasure and restriction of processing. You also have the right to ask from us a structured, common and machine-readable format of Personal Data you provided to us. We can only identify you via your email address and we can only adhere to your request and provide information if we have Personal Data about you through you having made contact with us directly and/or you using our site and/or service. We cannot provide, rectify or delete any data that we store on behalf of our users or customers. To exercise any of the rights mentioned in this Privacy Policy and/or in the event of questions or comments relating to the use of Personal Data you may contact us: <a href="mailto:kontakt@costacompagnie.org">kontakt@costacompagnie.org</a>. In addition, you have the right to lodge a complaint with the data protection authority in your jurisdiction.</p>
 <h3 id="third-party-disclosures">Third Party Disclosures</h3>
@@ -72,7 +77,7 @@
     </div>
 
 
-	<script src="https://deep.dance/js/bundle.min.9bd5004c66497c6ceb9ac4af3d685b2df6f36f12fc1d3432efa4d6627c5cdf95.js" integrity="sha256-m9UATGZJfGzrmsSvPWhbLfbzbxL8HTQy76TWYnxc35U=" crossorigin="anonymous"></script>
+	<script src="https://deep.dance/js/bundle.min.c721de08d656164bb0683f45ba2884603ca9565bd2ed837211f36139cc13644f.js" integrity="sha256-xyHeCNZWFkuwaD9FuiiEYDypVlvS7YNyEfNhOcwTZE8=" crossorigin="anonymous"></script>
 	
 <script type="text/javascript">
     var _paq = window._paq || [];
