--- a/choreography/index.html
+++ b/choreography/index.html
@@ -50,7 +50,7 @@
 <small class="visualizer">
 <iframe id="visualizer-02" class="visualizer" title="visualizer" src="https://erak.github.io/deep-dance-visualizer/#/1"
         width="1280" height="800" frameborder="0" allowfullscreen></iframe>
-<p>AI choreography, figure A (10 Min) - transcribed and performed by Lisa Rykena
+<p>AI choreography, figure A (10 Min) - transcribed and performed by Girish Kumar
 </small></p>
 <small class="visualizer">
 <iframe id="visualizer-01" class="visualizer" title="visualizer" src="https://erak.github.io/deep-dance-visualizer/#/0"
@@ -60,7 +60,7 @@
 <p><small class="visualizer" ></p>
 <iframe id="visualizer-03" class="visualizer" title="visualizer" src="https://erak.github.io/deep-dance-visualizer/#/2"
     width="1280" height="800" frameborder="0" allowfullscreen></iframe>
-<p>AI choreography, figure C (10 Min) - transcribed and performed by Girish Kumar
+<p>AI choreography, figure C (10 Min) - transcribed and performed by Lisa Rykena
 </small></p>
 
                 
