--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
 
 	<title>Read more about the code</title>
 	<link rel="alternate" type="application/rss+xml" href="https://deep.dance/code/index.xml" title="Read more about the code" />
-	<link rel="stylesheet" href="https://deep.dance/css/style.min.f3876db5f3b032dc59df060b8cd002106392ef827651aa07aecccdaa31f439a6.css" integrity="sha256-84dttfOwMtxZ3wYLjNACEGOS74J2UaoHrszNqjH0OaY=" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://deep.dance/css/style.min.01eecf49facb8e206e31f11bf042d64f38eb4615b1d26dca44899749ec1698fd.css" integrity="sha256-Ae7PSfrLjiBuMfEb8ELWTzjrRhWx0m3KRImXSewWmP0=" crossorigin="anonymous">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </head>
@@ -44,11 +44,11 @@
 <br/>
 <br/>
 <h1 id="overview">Overview</h1>
-<p>The core software component of Deep.Dance is a system, that uses machine learning to study existing and create new movement sequences. In order to visualize these newly created movement sequences a web-based component, that could render them, was developed. An additional web-based component, that can control and animate a LED light setup on stage, was also to the set of components.</p>
+<p>The core software component of Deep.Dance is a system, that uses machine learning to study existing and create new movement sequences. In order to visualize these movement sequences, a web-based component, that could render them, was developed. An additional web-based component, that can control and animate a LED light setup on stage, was also to the set of components.</p>
 <h1 id="machine-learning">Machine Learning</h1>
-<p>The purpose of the main software component was to extract movement sequences from existing video recordings, train a neural network such that it can predict subsequent movements and generate new movement sequences from arbitrary input movements. This resulted in a pipeline design that involved the stages described in the sections below.</p>
+<p>The purpose of the core component was to extract movement sequences from existing video recordings, train a neural network such, that it can predict subsequent movements and generate new movement sequences from arbitrary input movements. This resulted in a pipeline design that involved the stages described in the sections below.</p>
 <h2 id="dataset">Dataset</h2>
-<p>First of all, a dataset that is needed for the training of the neural network was created. Since the aim was to create new movement sequences, it was decided to use an image-based approach and record videos of several predefined movement qualities done by several dancers. These videos are then fed into the first stage of the pipeline which uses the software libraries <a href="https://github.com/facebookresearch/detectron2">Detectron2 →</a> and <a href="https://github.com/facebookresearch/VideoPose3D">VideoPose3D →</a> to analyse all videos frame by frame and extract movement information in the form of keypoints. These keypoints are a representation of movement information of a human body. The following figure illustrates this by a rendering of extracted keypoints for the very same frame of an input video:</p>
+<p>First of all, the dataset needed for the training of the neural network was created. Since the aim was to create new movement sequences, it was decided to use an image-based approach and record videos of several predefined movement qualities done by several dancers. These videos were then fed into the first stage of the pipeline which uses the software libraries <a href="https://github.com/facebookresearch/detectron2">Detectron2 →</a> and <a href="https://github.com/facebookresearch/VideoPose3D">VideoPose3D →</a> to analyse all videos frame by frame and extract movement information in the form of keypoints. These keypoints are a representation of movement information of a human body. The following figure illustrates this (rendering of extracted keypoints for the very same frame of an input video):</p>
 <p><img src="https://deep.dance/code_single_01.png#img-small" alt="">
 <img src="https://deep.dance/code_single_02.png#img-small" alt=""></p>
 <p>Since a video contains of a time series of frames, the result of the extraction process is also a time series, but of keypoints instead of frames.</p>
