--- a/show/index.html
+++ b/show/index.html
@@ -35,10 +35,11 @@
         <div id="home-content" class="container">
             <h1 class="text-big"><a href="https://deep.dance/#exhibits" class="back-link">←</a>Watch live performance</h1>
             <div class="content">
-                <!-- <iframe id="show-video" title="vimeo-player" src="https://player.vimeo.com/video/559893868" 
-    width="1280" height="720" frameborder="0" allowfullscreen></iframe> -->
-<iframe id="show-video" title="vimeo-player" src="https://player.vimeo.com/video/564208065/" 
+                <iframe id="show-video" title="vimeo-player" src="https://player.vimeo.com/video/559893868" 
     width="1280" height="720" frameborder="0" allowfullscreen></iframe>
+<p><a href="https://deep.dance#mc_embed_signup">Get a notification for offline events →</a></p>
+<!-- <iframe id="show-video" title="vimeo-player" src="https://player.vimeo.com/video/564208065/" 
+    width="1280" height="720" frameborder="0" allowfullscreen></iframe> -->
 <!-- <small>
 Enter the hermetically soft world of code. Human, Transhuman. Machine learning. Dance. Computation. Creativity. Prediction. Soft-ware. Choreography.
 </small> -->
